# utter-server

./: .gitignore  Cargo.toml
server/: Cargo.toml  utter.server.config.toml
server/src/: config.rs  main.rs
src/: config.rs  main.rs  secret.rs
