[package]
name = "utter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["multipart"] }
base64 = "0.22.1"
futures-util = "0.3.31"
hex-literal = "1.0.0"
jsonwebtoken = "9.3.1"
mysql = "26.0.1"
rand = { version = "0.9.0", features = ["std_rng"] }
rand_core = { version = "=0.6.4", features = ["std"] }
redis = { version = "0.28.2", features = ["tokio-comp", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-smile = "0.2.2"
sha2 = "0.10.9"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
