[package]
name = "utter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
rand = { version = "0.9.0", features = ["std_rng"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
