[package]
name = "utter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
rand = { version = "0.9.0", features = ["std_rng"] }
rand_core = { version = "=0.6.4", features = ["std"] }
redis = { version = "0.28.2", features = ["tokio-comp", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
